--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 	  			<section class="col-md-8 w-contacts w-messages">
 	  				<header class="w-chat-messages clearfix">
 	  					<div class="avatar col-xs-9 w-chat-profile">
-	  						<img src="image/logocodeacademy.png" alt="">
-	  						<h4 class="w-contact-name">Laboratoria Perú</h4>
+	  						<img src="image/logocodeacademy.png" alt="" id="image">
+	  						<h4 class="w-contact-name" id="user">Laboratoria Perú</h4>
 	  						<ul class="w-users-messages">
 	  							<li>Ana María, </li>
 	  							<li>Aldo, </li>
@@ -247,6 +247,7 @@
 	  						<li class="col-xs-1 w-write-message-item icon-insert_emoticon w-write-message-icon"></li>
 	  						<li class="col-xs-10 w-write-message-item w-write-message-input">
 	  							<input type="text" name="w-message-input" class="w-write-message-field" placeholder="Escribe tu mensaje aquí" id="mensajes">
+	  							
 	  						</li>
 	  						<li class="col-xs-1 w-write-message-item icon-mic w-write-message-icon"></li>
 	  					</ul>
